# apple

./: .gitignore  LICENSE  README.md
apple_control/: CMakeLists.txt  package.xml
apple_control/config/: apple_control.yaml
apple_control/launch/: .#apple_control.launch  apple_control.launch
apple_description/: CMakeLists.txt  package.xml
apple_description/collision/: collision.yaml
apple_description/gazebo/: gazebo.urdf.xacro
apple_description/launch/: apple.rviz  apple_rviz.launch  lbr_velvet.rviz  lbr_velvet_rviz.launch  rviz.launch
apple_description/meshes/: citi_truck.stl  dummy_citi_truck.stl  half_pallet.stl
apple_description/meshes/coarse/: citi_truck.stl
apple_description/urdf/: apple.gazebo.xacro  apple.urdf.xacro  citi_truck.xacro  dummy_citi_truck.xacro  half_pallet.xacro  lbr_velvet.urdf.xacro  materials.xacro  utilities.xacro
apple_gazebo/: CMakeLists.txt  package.xml
apple_gazebo/launch/: apple_world.launch
apple_gazebo/worlds/: apple.world
apple_launch/: CMakeLists.txt  package.xml  setup_eth.sh
apple_launch/hqp_tasks/: joint_limits.yaml  task_definitions.yaml
apple_launch/launch/: apple_gazebo_effort_pos_control.launch  apple_gazebo_forward_pos_control.launch  apple_gazebo_forward_vel_control.launch  apple_gazebo_group_forward_vel_control.launch  apple_gazebo_hqp_vel_control.launch  lbr_iiwa_control.launch  lbr_iiwa_vel_control.launch
custom_cmake_modules/: CMakeLists.txt  package.xml
custom_cmake_modules/cmake/: custom_cmake_modules-extras.cmake.installspace.in
demo_palletizing/: CMakeLists.txt  package.xml
demo_palletizing/hqp_tasks/: task_definitions.yaml
demo_palletizing/include/demo_palletizing/: demo_palletizing.h
demo_palletizing/launch/: demo_palletizing.launch  demo_palletizing_gazebo.launch  demo_palletizing_onboard.launch
demo_palletizing/src/: demo_palletizing.cpp  gimme_beer.cpp  lets_dance.cpp  look_what_i_found.cpp
demo_palletizing/test/: setGraspApproach.sh  setGripperExtract.sh  setObjectExtract.sh  setObjectLift.sh  setObjectPlace.sh  setObjectTransfer.sh  setPileApproach.sh  setPileGrasp.sh  setPileRetract.sh  setRCCourseDemoInit.sh  setRCCourseDemo_1.sh  setSensingConfiguration.sh  setTransferConfiguration.sh  smartGrasp.sh  sphereSphere.sh  test.sh
hqp_controllers/: CMakeLists.txt  README.md  hqp_controllers_plugins.xml  package.xml
hqp_controllers/include/hqp_controllers/: .#hqp_velocity_controller.h  conversions.h  hqp.h  hqp_effort_controller.h  hqp_velocity_controller.h  task.h  task_dynamics.h  task_geometry.h  task_link.h  task_manager.h  task_object.h  utilities.h
hqp_controllers/src/: hqp.cpp  hqp_effort_controller.cpp  hqp_velocity_controller.cpp  task.cpp  task.cpp.autosave  task_dynamics.cpp  task_geometry.cpp  task_link.cpp  task_manager.cpp  task_object.cpp
hqp_controllers/test/: angleLines.sh  coplanarLineCone.sh  coplanarLines.sh  jointLimitAvoidance.sh  jointLimits.sh  jointSetpoint.sh  jointSetpoints.sh  orientLineCone.sh  parallelLines.sh  projectLineLine.sh  projectPointCylinder.sh  projectPointPlane.sh  projectSpherePlane.sh  resetController.sh  setCapsule.sh  setFrame.sh  setHomeConfiguration.sh  setLine.sh  setPlane.sh  setPoint.sh  setSensingConfiguration.sh  setTask.sh  setTaskObjects.sh  setTasks.sh  setTransferConfiguration.sh  task_dynamics.m  test.cpp  test.h  visualizeTaskObjects.sh
hqp_controllers_msgs/: CMakeLists.txt  package.xml
hqp_controllers_msgs/msg/: Task.msg  TaskDynamics.msg  TaskGeometry.msg  TaskLink.msg  TaskObject.msg  TaskStatus.msg  TaskStatusArray.msg
hqp_controllers_msgs/srv/: FindCanTask.srv  LoadTasks.srv  RemoveTaskLinks.srv  SetTask.srv  SetTaskLinks.srv  SetTaskObject.srv  SetTaskObjects.srv  SetTasks.srv  VisualizeTaskObjects.srv
hqp_velocity_controller/: CMakeLists.txt  README.md  package.xml
self_collision/: CMakeLists.txt  package.xml
