<?xml version="1.0"?>
<package>
  <name>apple_control</name>
  <version>0.0.0</version>
  <description>The apple_control package</description>

  <maintainer email="robert.krug@oru.se">Robert Krug</maintainer>

  <license>BSD</license>

  <author email="robert.krug@oru.se">Robert Krug</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>

  <run_depend>lbr_iiwa_control</run_depend>
  <run_depend>velvet_fingers_control</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>ros_control</run_depend>
  <run_depend>ros_controllers</run_depend>

  <export>
  </export>

</package>
