<?xml version="1.0"?>
<package>
  <name>apple_launch</name>
  <version>0.0.0</version>
  <description>The apple_control package</description>

  <maintainer email="robert.krug@oru.se">Robert Krug</maintainer>

  <license>BSD</license>

  <author email="robert.krug@oru.se">Robert Krug</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>lbr_iiwa_description</run_depend>
  <run_depend>lbr_iiwa_control</run_depend>
  <run_depend>velvet_fingers_description</run_depend>
  <run_depend>velvet_fingers_control</run_depend>
  <run_depend>controller_manager</run_depend>

  <export>
  </export>

</package>
