<?xml version="1.0"?>
<package>
  <name>hqp_velocity_controller</name>
  <version>0.0.0</version>
  <description>The hqp_velocity_controller package</description>

  <maintainer email="robert.krug@oru.se">Robert Krug</maintainer>

  <license>BSD</license>

  <author email="robert.krug@oru.se">Robert Krug</author>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>controller_interface</build_depend>

  <run_depend>controller_interface</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
